--- a/My_hobby/index.html
+++ b/My_hobby/index.html
@@ -7,17 +7,17 @@
 
 <body>
 	<h1>Миний хобби</h1>
-	<p>Миний хобби бол тоглох.Би бага байхаасаа л сагсан  бөмбөг сонирхдог байсан. Чөлөөт цагаараа сагсан бөмбөг тоглох , дуу сонсох , ном унших дуртай. Яагаад вэ гэвэл дуу сонсвол тайвширдаг. Сагсан бөмбөг тогловол найзуудтайгаа хамт тоглодог учраас хөгжилтэй байдаг.</p>
-	<p>Та бүхэнд сонирхуулаад өөрийнхөө дуртай тоглочдийн зургийг үлдээе.</p>
+	<p>Би чөлөөт цагаараа сагсан бөмвөг мөн волейболын спортоор хичээллэх дуртай. Арван жилдээ волейболын спортоор түлхүү бэлтгэл хийж улс бүсийн тэмцээнд амжилттай оролцсон.</p>
+	<p>Та бүхэнд сонирхуулж дуртай тамирчидынхаа зургийг үлдээе.</p>
 	<p><ol>
 		<li>
-			<img src="https://i.pinimg.com/originals/8a/8b/50/8a8b50da2bc4afa933718061fe291520.jpg" width="50" height="50" alt="DOTA2">
-		James Harden</li>
+			<img src="https://www.fivb.org/Vis2009/Images/GetImage.asmx?No=49357&type=Press&width=920&height=588&stretch=uniformtofill" width="100" height="50" alt="volleyball">
+		Micah Christenson</li>
 	</p>
 	<p>
 		<li>
-			<img src="https://i.pinimg.com/originals/56/df/3c/56df3cc16166c2ef6adf78ddb22b20e7.png" width="100" height="50" alt="counter-strike">
-		Brooklyn Nets </li>
+			<img src="https://www.fivb.org/Vis2009/Images/GetImage.asmx?No=202002745&maxSize=0" width="100" height="50" alt="volleyball">
+		 Yuji Nishida</li>
 	</ol>
 	</p>
 </body>
